STYLING: fixed variable names to be more readable

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -20,26 +20,26 @@
   display: block;
 }
 
-.butt-orange {
-  background-color: $gt-orange;
+.butt-quiz {
+  background-color: $gt-quiz;
 }
-.butt-dkpurple {
-  background-color: $gt-dkpurple;
+.butt-mixtape {
+  background-color: $gt-mixtape;
 }
-.butt-ltpurple {
-  background-color: $gt-ltpurple;
+.butt-list {
+  background-color: $gt-list;
 }
-.butt-pink {
-  background-color: $gt-pink;
+.butt-collage {
+  background-color: $gt-collage;
 }
-.butt-dkgreen {
-  background-color: $gt-dkgreen;
+.butt-bkg {
+  background-color: $gt-bkg;
 }
 
 .butt-custom {
   width: 100%;
   padding: 5px 0px;
-  background-color: $gt-orange;
+  background-color: $gt-header;
   color: black;
   border: none;
   transition: 0.3s;
