--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,9 +1,9 @@
 body {
-  background-color: $gt-dk-blue;
+  background-color: $gt-bkg;
   text-align: center;
 }
 h2 {
-  color: $gt-orange;
+  color: $gt-header;
   font-size: 40px;
   margin-bottom: 24px;
 }
